css/game-pension-style.css
@font-face {
    font-family:'Sparkasse';
    src:url(../fonts/sparkasse_professionel/SparBd.ttf);
    font-weight:bold;
}

@font-face {
    font-family:'SparkasseHead';
    src:url(../fonts/sparkasse_professionel/SparkasseHead_Rg.ttf);
    font-weight:bold;
    font-style:normal
}

*:focus {
    outline: none;
}

.noselect {
  -webkit-touch-callout: none;
  -webkit-user-select: none;
  -khtml-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

h1.card-title {
  white-space: nowrap;
  font-size: 39px;
}

.if6_breadcrumb {
  margin-bottom: 10px;
}

@media screen and (max-width: 999px) {
  h1.card-title {
    white-space: normal;
  }
}

.if6_buttonline div.greyed-out-btn {
  background-color: #777;
}

.sparkasse-bolder {
  font-family: Sparkasse;
}


/* HEADER IMAGE */

.img-container {
  position: relative;
  margin-bottom: 24px;
}

.text-logo-container {
  position: absolute;
  top: 0;
  width: 100%;
  height: 100%;
}

.text-logo {
  position: absolute;
  font-size: 3em;
  background-color: red;
  padding: 20px 20px 20px 20px;
  color: white;
  width: 362px;
  bottom: 61px;
}

.text-logo h1 {
  font-family: SparkasseHead;
  color: white;
  font-size: 55px;
  line-height: 66px;
}

.text-logo h3 {
  font-size: 16px;
  color: white;
  line-height: 19px;
  margin: 0 0 14px 0;
}


.question-cards-section {
  position: relative;
}

.question-card-section {
/*   margin-top: 20px; */
  top: 0;
  position: absolute;
}

.current-question-card {
  position: relative;
}

/* OPENER */

/* .if6_opener {
  height: 100%;
}

.if6_outer.if6_openerstage .if6_inner {
  max-width: 100%;
  height: 100%;
}

.if6_opener .ty1 div.overlay {
  width: 360px;
  position: absolute;
  bottom: 65px
}

.if6_opener .ty1 h2 {
  color: #fff;
  font: 55px SparkasseHead,Arial,sans-serif;
  font-weight: bold;
  line-height: normal;
  margin-bottom: 20px;
}

.if6_opener .ty1 h1 {
    font-size: 16px;
    line-height: normal;
    font-weight: bold;
} */

/* SLIDERS */

.ui-handle-text {
  position: absolute;
  width: 100%;
  text-align: center;
  top: -30px;
  color: red;
  white-space: nowrap;
  font-size: 17px;
}

.ui-corner-all, .ui-corner-bottom, .ui-corner-right, .ui-corner-br {
  border-radius: 0;
}

/* pension-result-slider -> pension-simple-slider */

.pension-simple-slider {
  margin: 2em 0;
}

.pension-simple-slider .ui-slider-handle {
  width: 30px;
  height: 30px;
  top: -13.5px;
  border-radius: 50%;
  background: white;
  cursor: pointer;
}

@media screen and (max-width: 839px) {
  .pension-simple-slider .ui-slider-handle {
    width: 40px;
    height: 40px;
    top: -19px;
    background: white;
  }
}

.ui-widget {
  font-family: SparkasseRg;
}

.pension-simple-slider .ui-slider-handle:focus,
.pension-slider .ui-slider-handle:focus {
  outline: none;
}

.pension-simple-slider.ui-widget-content {
  border: none;
  background: #F0F0F0;
}

.pension-simple-slider.ui-slider-horizontal {
  height: 5px;
}

.pension-simple-slider .ui-slider-range-min {
  background: red;
}

.pension-simple-slider .min,
.pension-simple-slider .max {
  font-family: SparkasseRg;
  font-size: 14px;
  color: #666666;
  position: absolute;
  top: 14px;
}

.pension-simple-slider .max {
  right: 0;
}

.pension-simple-slider .value {
  color: red;
  font-size: 17px;
  position: absolute;
  right: 0;
  top: -34px;
}

/* pension-slider->pension-question-slider */

.pension-question-slider.ui-widget-content {
  background: white;
  border: none;
  background-color: red;
  display: inline-block;
  outline: none;
  width: 100%;
}

.pension-question-slider.ui-slider-horizontal {
  height: 12px;
}

.pension-question-slider .ui-widget-header {
  background: red;
}

.pension-question-slider .ui-slider-handle {
  background: red;
  width: 80px;
  height: 80px;
  border-radius: 50%;
  border: none;
  margin-left: -40px;
  margin-top: -40px;
  top: 0;
  left: 0;
  -webkit-transition: all 1s;
  -moz-transition: all 1s;
  -ms-transition: all 1s;
  -o-transition: all 1s;
  transition: all 1s;
  cursor: pointer;
}

@media screen and (max-width: 539px) {
  .pension-question-slider.ui-slider-horizontal {
    height: 3px;
  }

  .pension-question-slider .ui-slider-handle {
    width: 40px;
    height: 40px;
    margin-left: -20px;
    margin-top: -20px;
  }
}

/* slider icons */

.slider-icon-leben .ui-slider-handle {
  background-color: red !important;
  background-image: url("../img/icons/icon-leben.png") !important;
}

.slider-icon-reisen .ui-slider-handle {
  background-color: red !important;
  background-image: url("../img/icons/icon-reisen.png") !important;
}

.slider-icon-freizeit .ui-slider-handle {
  background-color: red !important;
  background-image: url("../img/icons/icon-freizeit.png") !important;
}

.slider-icon-wohnen .ui-slider-handle {
  background-color: red !important;
  background-image: url("../img/icons/icon-wohnen.png") !important;
}

.slider-icon-herzen .ui-slider-handle {
  background-color: red !important;
  background-image: url("../img/icons/icon-herzen.png") !important;
}

.slider-icon-leben .ui-slider-handle,
.slider-icon-reisen .ui-slider-handle,
.slider-icon-wohnen .ui-slider-handle,
.slider-icon-herzen .ui-slider-handle,
.slider-icon-freizeit .ui-slider-handle {
  background-repeat: no-repeat !important;
  background-position: 50% !important;
  background-size: 50% auto !important;
}


/* USER AGE CARD */

#QuestionAge {
  clear: both;
}

#QuestionAge th {
  white-space: nowrap;
  color: #777777;
}

.user-age-table td.user-age-slider-cell {
  padding-left: 60px;
  padding-right: 60px;
  width: 100%;
}

@media screen and (max-width: 649px) {
  .user-age-table td.user-age-slider-cell {
    width: auto;
    padding-left: 10px;
    padding-right: 10px;
  }
}

#SliderUserAge {
  position: relative;
}

#SliderUserAge .min:after,
#SliderUserAge .max:after,
#SliderUserAge .value:after {
  content: " Jahre";
}

#SliderUserAge .ui-handle-text {
  left: -16px;
}
/* ... */

